alterando imagens depo123

--- a/css/style.css
+++ b/css/style.css
@@ -801,6 +801,20 @@ p.solid2 label{
         top: 100px;
     }
 
+    #depo1 img{
+        width: 20px;
+        height: 20px;
+    }
+
+    #depo2 img{
+        width: 20px;
+        height: 20px;
+    }
+
+    #depo2 img{
+        width: 20px;
+        height: 20px;
+    }
 
 }
 
