alteracoes nas setas

--- a/css/style.css
+++ b/css/style.css
@@ -794,11 +794,11 @@ p.solid2 label{
     }
 
     #seta1{
-        top: 100px;
+        bottom: 100px;
     }
 
     #seta2{
-        top: 100px;
+        bottom: 100px;
     }
 
     #depo1 img{
