--- a/css/style_login.css
+++ b/css/style_login.css
@@ -188,7 +188,7 @@ border-color: red;
 @media screen and (max-width: 450px) {
 
     .container{
-        height: 72.06vh;
+        height: 80.06vh;
     }
     #cadcompr {
         display: none;
@@ -217,5 +217,8 @@ border-color: red;
         
     }
     
-    
+    .figure5{
+        width: 22px;
+        height: 22px;
+    }
 }
