--- a/css/style.css
+++ b/css/style.css
@@ -886,7 +886,7 @@ p.solid2 label{
 
     .centror{
         background-color: black;
-        height: 81.22vh;
+        height: 61.22vh;
         text-align: center;
         background-image: linear-gradient(to right,#142B77  ,black 50% ,#142B77 );
         position: relative;
@@ -927,5 +927,44 @@ p.solid2 label{
         border-style: solid;
         
     }
+
+    .carrousel img{
+    
+        width: 52.0vw;
+        height: 53.5vh;
+        
+    }
+
+    .carrousel{
+        display: flex;
+        margin: 0;
+        border: 0px;
+        width: 50.32vw;
+        height: 53.5vh;
+        margin: 0px;
+        transition: transform 0.5s ease-in-out;
+        transform: translateX(0);
+        
+        position: relative;
+        
+    }
+
+    .img-esquerda img{
+    
+        width: 24.72vw;
+        height: 53.5vh;
+        
+    
+    }
+
+    .img-direita {
+        position: relative;
+        height: 53.5vh;
+        width: 24.72vw;
+        
+        
+        
+    
+    } 
 
     }
