--- a/css/style.css
+++ b/css/style.css
@@ -883,7 +883,7 @@ p.solid2 label{
 }
 
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 800px) and (min-width: 450px) {
 
 
     .centror{
